// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildRunModel should render with undefined 1`] = `
<Fragment>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <ModelDownload
      modelName="<N/A>"
      pageName="ChildRun"
    />
    <ModelDeploy
      modelName="<N/A>"
      onModelRegister={[MockFunction]}
      pageName="ChildRun"
    />
  </div>
  <div
    style={
      Object {
        "marginBottom": "1em",
        "textAlign": "right",
      }
    }
  >
    <StyledLinkBase
      href="https://docs.microsoft.com/en-us/azure/machine-learning/service/how-to-create-portal-experiments#deploy-model"
      target="_blank"
    >
      Learn more about deploying models 
      <StyledIconBase
        iconName="NavigateExternalInline"
      />
    </StyledLinkBase>
  </div>
</Fragment>
`;

exports[`ChildRunModel should render with valid props 1`] = `
<Fragment>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <ModelDownload
      experimentName="Test Experiment"
      modelName="MaxAbsScaler, RandomForest"
      modelUri="Test Uri"
      pageName="ChildRun"
      run={
        Object {
          "createdUtc": 2019-02-01T08:20:00.000Z,
          "endTimeUtc": 2019-02-01T08:25:00.000Z,
          "experimentId": "exp",
          "name": "AutoML_001",
          "options": Object {
            "generateDataContainerIdIfNotSpecified": true,
          },
          "parentRunId": "AutoML_000",
          "properties": Object {
            "class_labels": "",
            "pipeline_id": "eda663ea8f36e6c07948c99bba9d1becb40991a5",
            "primary_metric": "spearman_correlation",
            "runTemplate": "automl_child",
            "run_algorithm": "RandomForest",
            "run_preprocessor": "MaxAbsScaler",
            "run_template": "automl_child",
            "score": "0.977770827248834",
          },
          "runId": "AutoML_001",
          "startTimeUtc": 2019-02-01T08:20:00.000Z,
          "status": "Completed",
        }
      }
    />
    <ModelDeploy
      experimentName="Test Experiment"
      modelName="MaxAbsScaler, RandomForest"
      modelUri="Test Uri"
      onModelRegister={[MockFunction]}
      pageName="ChildRun"
      run={
        Object {
          "createdUtc": 2019-02-01T08:20:00.000Z,
          "endTimeUtc": 2019-02-01T08:25:00.000Z,
          "experimentId": "exp",
          "name": "AutoML_001",
          "options": Object {
            "generateDataContainerIdIfNotSpecified": true,
          },
          "parentRunId": "AutoML_000",
          "properties": Object {
            "class_labels": "",
            "pipeline_id": "eda663ea8f36e6c07948c99bba9d1becb40991a5",
            "primary_metric": "spearman_correlation",
            "runTemplate": "automl_child",
            "run_algorithm": "RandomForest",
            "run_preprocessor": "MaxAbsScaler",
            "run_template": "automl_child",
            "score": "0.977770827248834",
          },
          "runId": "AutoML_001",
          "startTimeUtc": 2019-02-01T08:20:00.000Z,
          "status": "Completed",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "marginBottom": "1em",
        "textAlign": "right",
      }
    }
  >
    <StyledLinkBase
      href="https://docs.microsoft.com/en-us/azure/machine-learning/service/how-to-create-portal-experiments#deploy-model"
      target="_blank"
    >
      Learn more about deploying models 
      <StyledIconBase
        iconName="NavigateExternalInline"
      />
    </StyledLinkBase>
  </div>
</Fragment>
`;
